# examples

./: .gitignore
arduino-esp32-basic-send/: platformio.ini
arduino-esp32-basic-send/include/: secrets.h.example
arduino-esp32-basic-send/src/: main.cpp
demo-dashboard/: index.html
demo-point/: index.html
demo-sensor/: index.html
python-basic-send/: .env.example  main.py  pyproject.toml
python-basic-subscribe/: .env.example  main.py  pyproject.toml
